name:                playground
version:             0.0.0.0
synopsis:            Experiments with Haskell
cabal-version:       >=1.22

executable mountains-exe
  hs-source-dirs:    src 
                     , src/mountains
  main-is:             Mountains.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-missing-signatures
  ghc-options:         -fwarn-missing-signatures -threaded -rtsopts
  build-depends:       base
                     , OpenGL
                     , GLUT
                     , random
  default-language:    Haskell2010
  other-modules:     Utilities


executable waterfall-exe
  hs-source-dirs:      src
  main-is:             Waterfall.hs
  ghc-options:         -fwarn-missing-signatures -threaded -rtsopts
  build-depends:       base
                     , dynamic-graph
                     , either
                     , pipes
                     , random
                     , OpenGL
  default-language:    Haskell2010

